# soilbot-sim

./: .gitignore  README.md
husky/husky_description/meshes/: double_rail.stl  double_rail_short.STL
husky/husky_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro  laser.urdf.xacro
husky/husky_gazebo/launch/: gazebo.launch.py
husky/husky_gazebo/worlds/: husky.world
my_robot/: package.xml  setup.py
my_robot/config/: nav2_params.yaml
my_robot/launch/: navigation.launch.py  soil_sampling.launch.py
my_robot/my_robot/: attach_lidar.py  fake_scan.py  gps_sensor.py  listener.py  soil_monitor.py  spawn_lidar_sensor.py  talker.py
os1_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
os1_gazebo_plugin/src/: os1_gazebo_plugin.cpp
os1_gazebo_plugin/urdf/: os1_64.urdf.xacro
soil_msgs/: CMakeLists.txt  package.xml
soil_msgs/msg/: SoilMeasurement.msg
