<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>os1_gazebo_plugin</name>
  <version>0.1.0</version>
  <description>
    Gazebo Classic model plugin that publishes PointCloud2 from a ray sensor
    without using remapping tags — avoids breaking gazebo_ros2_control's YAML parser.
    Simulates an Ouster OS1-64 beam pattern.
  </description>
  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Tell Gazebo where to find the plugin .so after install -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
  </export>
</package>
